--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,18 +10,31 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-01-10T01:40:10Z",
-  "commit-sha" : "99f3a03872a619e58c069e14e58e974b66a4f5ac",
+  "commit-time" : "2025-01-21T01:04:32Z",
+  "commit-sha" : "5171b565dc9fbbe2c10479fb28bf4a2cf3936764",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "ad38b793b1dd4c5fb404d647b252716de3583920",
-    "size" : 1448,
+    "sha" : "99bce2a3e965a4ac2ada71ccf7a81ca55c4e4c1d",
+    "size" : 1533,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
     "git_user" : "dbns97"
   },
   "data_intg_flow" : {
+    "TestFlow2" : {
+      "id" : "0cf2c6fd-db4b-49c4-9516-04a4ee65d5bb",
+      "name" : "TestFlow2",
+      "sha" : "682d4d32e7627fe0f1e7a2f2352150b1b4db560e",
+      "size" : 3043,
+      "created_at" : "2025-01-10T05:52:29Z",
+      "updated_at" : "1737420911901",
+      "asset_type" : "data_intg_flow",
+      "resource_key" : "",
+      "iam_id" : "1000331002",
+      "user_name" : "drew",
+      "git_user" : "dbns97"
+    },
     "commit-test-flow" : {
       "id" : "a4fef540-c83f-4788-bab3-5dd9f03fd41c",
       "name" : "commit-test-flow",
