--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-01-21T01:04:32Z",
-  "commit-sha" : "5171b565dc9fbbe2c10479fb28bf4a2cf3936764",
+  "commit-time" : "2025-01-21T02:13:26Z",
+  "commit-sha" : "f25475b970166d96e7842fdd81ba3b8cfef67d80",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "99bce2a3e965a4ac2ada71ccf7a81ca55c4e4c1d",
-    "size" : 1533,
+    "sha" : "433f1a6be29b10125d40e8d9af6d2aefa54ffd29",
+    "size" : 1623,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2262,6 +2262,19 @@
       "resource_key" : "",
       "iam_id" : "1000330999",
       "user_name" : "admin"
+    },
+    "TestFlow2.DataStage job" : {
+      "id" : "803fe29e-8e9b-4e81-878d-35a662a2f55d",
+      "name" : "TestFlow2.DataStage job",
+      "sha" : "9b72aa79d3bf3fb12666bcb0209eab1d07f21f80",
+      "size" : 891,
+      "created_at" : "2025-01-21T01:23:49Z",
+      "updated_at" : "1737422629811",
+      "asset_type" : "job",
+      "resource_key" : "",
+      "iam_id" : "1000331002",
+      "user_name" : "drew",
+      "git_user" : "dbns97"
     },
     "Trial job - sq_cp4d_import_test" : {
       "id" : "30acd0d7-7f2e-40cc-84be-5db61f4ae70a",
