--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-01-22T03:23:36Z",
-  "commit-sha" : "fcec2bbdf081abbbd57929588d4f26dcb7396714",
+  "commit-time" : "2025-01-22T04:04:22Z",
+  "commit-sha" : "ee00cc617ec057a133fbc7ee2e72cd3ff2e10bb1",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "fdba1cfab6737cad37e665859007d7e3ec7d017a",
-    "size" : 1712,
+    "sha" : "4f6a20fb90cfef890b5a6de1590c4f84977b42cd",
+    "size" : 1798,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2319,6 +2319,19 @@
       "asset_type" : "connection",
       "resource_key" : "",
       "iam_id" : "1000331004",
+      "git_user" : "dbns97"
+    },
+    "S3-Connection1" : {
+      "id" : "3fe2fda7-2ae0-4cfe-bcac-ce8a665d2975",
+      "name" : "S3-Connection1",
+      "sha" : "41ba43008a5b9a2d3ff36e97db33cc93b844a1af",
+      "size" : 137003,
+      "created_at" : "2025-01-22T03:53:08Z",
+      "updated_at" : "1737517988429",
+      "asset_type" : "connection",
+      "resource_key" : "",
+      "iam_id" : "1000331002",
+      "user_name" : "drew",
       "git_user" : "dbns97"
     }
   },
