--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-07-15T02:56:14Z",
-  "commit-sha" : "1be385dafe3b6fa5cde60680d74e6c33455746fc",
+  "commit-time" : "2025-07-23T06:15:54Z",
+  "commit-sha" : "4e21a71f05599f3edaa6bd7ff5325c44f3ac1bbe",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "d8574022663004ed3fd33e4a4e302944e2982cac",
-    "size" : 1971,
+    "sha" : "52d6a0daf9f33509f70f79485506a20c2dac0add",
+    "size" : 2050,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2368,6 +2368,19 @@
       "sha" : "317dfca65c2b70c5de4e661ad8764ee77f53ff7a",
       "size" : 10891,
       "updated_at" : "2024-12-18T03:19:33Z",
+      "asset_type" : "parameter_set",
+      "resource_key" : "",
+      "iam_id" : "1000330999",
+      "user_name" : "admin",
+      "git_user" : "dbns97"
+    },
+    "blah" : {
+      "id" : "9a47a500-555e-448b-be00-21b0ce8eaf72",
+      "name" : "blah",
+      "sha" : "bd390e1f99668cc4fcb698aeb126695792a1b106",
+      "size" : 245,
+      "created_at" : "2025-07-23T06:08:12Z",
+      "updated_at" : "1753251313073",
       "asset_type" : "parameter_set",
       "resource_key" : "",
       "iam_id" : "1000330999",
