--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-07-23T06:15:54Z",
-  "commit-sha" : "4e21a71f05599f3edaa6bd7ff5325c44f3ac1bbe",
+  "commit-time" : "2025-08-13T12:07:11Z",
+  "commit-sha" : "f62709fa6fd3dc5d3bbc7c5b87db1f58e4fd815a",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "52d6a0daf9f33509f70f79485506a20c2dac0add",
-    "size" : 2050,
+    "sha" : "a134e39654a73d384a4b33fff2cb8a9f05e9bbde",
+    "size" : 2231,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -41,7 +41,7 @@
       "sha" : "a0362038fbe7ea789122f102be6634a458f8c4eb",
       "size" : 10012,
       "created_at" : "2025-03-11T02:39:52Z",
-      "updated_at" : "1752205793866",
+      "updated_at" : "2025-07-11T03:49:53Z",
       "asset_type" : "data_intg_flow",
       "resource_key" : "",
       "iam_id" : "1000330999",
@@ -74,7 +74,21 @@
       "git_user" : "dbns97"
     }
   },
-  "orchestration_flow" : { },
+  "orchestration_flow" : {
+    "TestPipeline" : {
+      "id" : "6ee6acf1-71be-4eaa-ad71-30b81b90260b",
+      "name" : "TestPipeline",
+      "sha" : "cb262ff80f6ce2212c4b95054b6d637e6ccaee30",
+      "size" : 7328,
+      "created_at" : "2025-03-11T02:40:34Z",
+      "updated_at" : "1741660835988",
+      "asset_type" : "orchestration_flow",
+      "resource_key" : "",
+      "iam_id" : "1000330999",
+      "user_name" : "admin",
+      "git_user" : "dbns97"
+    }
+  },
   "jobs" : {
     "BATCH_SNP_MDW_AD_Fact.DataStage sequence" : {
       "id" : "5fce72f7-79e2-4eb5-a4c7-d65981f08e96",
@@ -2295,7 +2309,20 @@
       "sha" : "a2e52ebe7893a64300ad923c1a527dfa3affff00",
       "size" : 887,
       "created_at" : "2025-03-11T02:40:25Z",
-      "updated_at" : "1741660825074",
+      "updated_at" : "2025-03-11T02:40:25Z",
+      "asset_type" : "job",
+      "resource_key" : "",
+      "iam_id" : "1000330999",
+      "user_name" : "admin",
+      "git_user" : "dbns97"
+    },
+    "Trial job - TestPipeline" : {
+      "id" : "54400e79-6b90-4ad9-bb65-2c9b7a770805",
+      "name" : "Trial job - TestPipeline",
+      "sha" : "2787e537cda50c2299efe78c058265546ee7c9c9",
+      "size" : 972,
+      "created_at" : "2025-03-11T02:40:37Z",
+      "updated_at" : "1741660837649",
       "asset_type" : "job",
       "resource_key" : "",
       "iam_id" : "1000330999",
