--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-08-13T12:07:11Z",
-  "commit-sha" : "f62709fa6fd3dc5d3bbc7c5b87db1f58e4fd815a",
+  "commit-time" : "2025-08-13T12:08:01Z",
+  "commit-sha" : "65e2ceea18d74dd7986d8b3f61540689eb1cbbdc",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "a134e39654a73d384a4b33fff2cb8a9f05e9bbde",
-    "size" : 2231,
+    "sha" : "2d6c6f26c6f58e648edc12b4056295be7cc15890",
+    "size" : 2321,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2461,7 +2461,21 @@
   "data_intg_cff_schema" : { },
   "function_library" : { },
   "custom_stage_library" : { },
-  "data_intg_test_case" : { },
+  "data_intg_test_case" : {
+    "TestCase1" : {
+      "id" : "b58b818a-7cd3-4dc3-8b48-310f73a1e6bd",
+      "name" : "TestCase1",
+      "sha" : "1d59df1d0ae9f37eb1d8f74018d0cefcfd1a604f",
+      "size" : 822,
+      "created_at" : "2025-03-11T02:40:30Z",
+      "updated_at" : "1741660830643",
+      "asset_type" : "data_intg_test_case",
+      "resource_key" : "",
+      "iam_id" : "1000330999",
+      "user_name" : "admin",
+      "git_user" : "dbns97"
+    }
+  },
   "flow_ids" : { },
   "orchestration_flow_ids" : { },
   "job_ids" : { },
