--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-08-18T09:08:03Z",
-  "commit-sha" : "58733a32b9ff62c57ce716b0dc487d1c96ec478c",
+  "commit-time" : "2025-08-18T09:08:23Z",
+  "commit-sha" : "0bf92ec76cb3c062f3913ba2f1bfb2d784cd0b93",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "12acaaeb2c7f331601ffbbd08a9368c64c87b080",
-    "size" : 2321,
+    "sha" : "122c99fd6035949c4d904ca375bad5edcbd1eccf",
+    "size" : 2406,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -41,6 +41,19 @@
       "size" : 10012,
       "created_at" : "2025-03-11T02:39:52Z",
       "updated_at" : "2025-07-11T03:49:53Z",
+      "asset_type" : "data_intg_flow",
+      "resource_key" : "",
+      "iam_id" : "1000330999",
+      "user_name" : "admin",
+      "git_user" : "dbns97"
+    },
+    "TestFlow4" : {
+      "id" : "665cd731-558e-491d-98ff-98a9f25efaab",
+      "name" : "TestFlow4",
+      "sha" : "98e8d87d41e0fdf34303ba0d91d3054a7deacc8e",
+      "size" : 6122,
+      "created_at" : "2025-08-18T09:07:11Z",
+      "updated_at" : "1755508056488",
       "asset_type" : "data_intg_flow",
       "resource_key" : "",
       "iam_id" : "1000330999",
