--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-08-26T07:11:41Z",
-  "commit-sha" : "240f5f8c70b7cebc59a1b07fc206781a3e9dceaa",
+  "commit-time" : "2025-08-27T04:36:30Z",
+  "commit-sha" : "5595174a67b1a0f18422e6ddc57ca57ef923bdfb",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "48965e4e6a9dd40a1b5696c5af4cae7cf6b6cd03",
-    "size" : 2495,
+    "sha" : "8748e3681bbcc42623b240c7ea072d82048fd4f1",
+    "size" : 2596,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -73,6 +73,19 @@
       "user_name" : "drew",
       "git_user" : "dbns97"
     },
+    "TestFlow4_target" : {
+      "id" : "41f970ee-e969-4b4a-b3ab-613053be3407",
+      "name" : "TestFlow4_target",
+      "sha" : "4c75aa8253ca4c6011547424f726bb6caf2fddd1",
+      "size" : 6181,
+      "created_at" : "2025-08-27T04:27:28Z",
+      "updated_at" : "1756268848401",
+      "asset_type" : "data_intg_flow",
+      "resource_key" : "",
+      "iam_id" : "1000331037",
+      "user_name" : "drew",
+      "git_user" : "dbns97"
+    },
     "commit-test-flow" : {
       "id" : "a4fef540-c83f-4788-bab3-5dd9f03fd41c",
       "name" : "commit-test-flow",
@@ -106,7 +119,7 @@
       "sha" : "cb262ff80f6ce2212c4b95054b6d637e6ccaee30",
       "size" : 7328,
       "created_at" : "2025-03-11T02:40:34Z",
-      "updated_at" : "1741660835988",
+      "updated_at" : "2025-03-11T02:40:35Z",
       "asset_type" : "orchestration_flow",
       "resource_key" : "",
       "iam_id" : "1000330999",
@@ -2346,7 +2359,7 @@
       "sha" : "2787e537cda50c2299efe78c058265546ee7c9c9",
       "size" : 972,
       "created_at" : "2025-03-11T02:40:37Z",
-      "updated_at" : "1741660837649",
+      "updated_at" : "2025-03-11T02:40:37Z",
       "asset_type" : "job",
       "resource_key" : "",
       "iam_id" : "1000330999",
@@ -2491,7 +2504,7 @@
       "sha" : "84a302c5dc2d6e1b77cc5f44a71ecf8d06fd747b",
       "size" : 822,
       "created_at" : "2025-03-11T02:40:30Z",
-      "updated_at" : "1741660830643",
+      "updated_at" : "2025-03-11T02:40:30Z",
       "asset_type" : "data_intg_test_case",
       "resource_key" : "",
       "iam_id" : "1000330999",
