--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-08-27T04:36:30Z",
-  "commit-sha" : "5595174a67b1a0f18422e6ddc57ca57ef923bdfb",
+  "commit-time" : "2025-08-28T06:09:53Z",
+  "commit-sha" : "5f7a682a0ab2ee82273beb2e901f2014a50ba280",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "8748e3681bbcc42623b240c7ea072d82048fd4f1",
-    "size" : 2596,
+    "sha" : "6271aea0b7c69c1f0ede4e07e5c3ee2d00cd5e67",
+    "size" : 2587,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -25,7 +25,7 @@
     "TestFlow2" : {
       "id" : "0cf2c6fd-db4b-49c4-9516-04a4ee65d5bb",
       "name" : "TestFlow2",
-      "sha" : "0a8a9bd32f0e214a4bedb62aa50d32cb4de62424",
+      "sha" : "b3d4ab16690c7af6b33a4e7feb05b8aa309cae48",
       "size" : 3043,
       "created_at" : "2025-01-10T05:52:29Z",
       "updated_at" : "1737420911901",
@@ -79,7 +79,7 @@
       "sha" : "4c75aa8253ca4c6011547424f726bb6caf2fddd1",
       "size" : 6181,
       "created_at" : "2025-08-27T04:27:28Z",
-      "updated_at" : "1756268848401",
+      "updated_at" : "2025-08-27T04:27:28Z",
       "asset_type" : "data_intg_flow",
       "resource_key" : "",
       "iam_id" : "1000331037",
