--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-09-01T05:59:20Z",
-  "commit-sha" : "42e8056e6da49f9d035fb1cac12809d234e9b3cc",
+  "commit-time" : "2025-09-01T05:59:41Z",
+  "commit-sha" : "bca0a8806e8d4367478b474abe152dd4da7b8e6d",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "e285b6177f8fdd9864df9c391ab63e8c5503e04a",
-    "size" : 2587,
+    "sha" : "3668e140d1c099562468f79835abbdfc1c1a3e4a",
+    "size" : 2687,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2509,6 +2509,19 @@
       "resource_key" : "",
       "iam_id" : "1000330999",
       "user_name" : "admin",
+      "git_user" : "dbns97"
+    },
+    "TestFlow2_TestCase1" : {
+      "id" : "e79eb515-a95b-4e4b-ba31-b3f9b30591ec",
+      "name" : "TestFlow2_TestCase1",
+      "sha" : "52b794a5dc6936a23905e4c81f0a4fcfd24d8cba",
+      "size" : 1174,
+      "created_at" : "2025-09-01T05:34:10Z",
+      "updated_at" : "1756706293087",
+      "asset_type" : "data_intg_test_case",
+      "resource_key" : "",
+      "iam_id" : "1000331037",
+      "user_name" : "drew",
       "git_user" : "dbns97"
     }
   },
