--- a/datastage/project.json
+++ b/datastage/project.json
@@ -10,12 +10,12 @@
     "iam_id" : "",
     "git_user" : "dbns97"
   },
-  "commit-time" : "2025-09-01T05:59:41Z",
-  "commit-sha" : "bca0a8806e8d4367478b474abe152dd4da7b8e6d",
+  "commit-time" : "2025-09-02T05:26:44Z",
+  "commit-sha" : "9a83762b67513e117e65908e521b76fece8606a8",
   "readme" : {
     "name" : "DataStage-README.json",
-    "sha" : "3668e140d1c099562468f79835abbdfc1c1a3e4a",
-    "size" : 2687,
+    "sha" : "900f671076a85ed9034e25f546a12889f05d937f",
+    "size" : 2793,
     "asset_type" : "readme",
     "resource_key" : "",
     "iam_id" : "",
@@ -2511,13 +2511,26 @@
       "user_name" : "admin",
       "git_user" : "dbns97"
     },
+    "TestCase1 copy 1" : {
+      "id" : "e2ef02a1-43f6-4afa-aad3-6433cdfcac49",
+      "name" : "TestCase1 copy 1",
+      "sha" : "07ba181645f4a9ebf96ea3a99329da03b314f738",
+      "size" : 838,
+      "created_at" : "2025-09-02T05:25:52Z",
+      "updated_at" : "1756790752279",
+      "asset_type" : "data_intg_test_case",
+      "resource_key" : "",
+      "iam_id" : "1000331037",
+      "user_name" : "drew",
+      "git_user" : "dbns97"
+    },
     "TestFlow2_TestCase1" : {
       "id" : "e79eb515-a95b-4e4b-ba31-b3f9b30591ec",
       "name" : "TestFlow2_TestCase1",
       "sha" : "52b794a5dc6936a23905e4c81f0a4fcfd24d8cba",
       "size" : 1174,
       "created_at" : "2025-09-01T05:34:10Z",
-      "updated_at" : "1756706293087",
+      "updated_at" : "2025-09-01T05:58:13Z",
       "asset_type" : "data_intg_test_case",
       "resource_key" : "",
       "iam_id" : "1000331037",
